--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Image gallery</title>
 	<meta charset="utf-8">
 	<link rel="icon" href="favicon.png">
-	<link rel="stylesheet" type="text/css" href="gallery.css">
-	<script type="text/javascript" src="gallery.js" async></script>
+	<link rel="stylesheet" type="text/css" href="main.css">
+	<script type="text/javascript" src="main.js" async></script>
 </head>
 <body>
 
@@ -15,26 +15,26 @@
 				<h1>Infrared photography</h1>
 			</header>
 			<p class="hint">Click or &larr; &rarr; to zoom</p>
-			<!-- <img src="img/j1.jpg" class="picture">  -->
+			<!-- <img src="img/small/j1.jpg" class="picture">  -->
 		</section>
 
 		<!-- <img src="small.jpg" srcset="medium.jpg 1000w, large.jpg 2000w" alt="yah"> -->
 		<div id="flex">
-			<div class="box small highlight"><img srcset="img/img1-m.jpg 1x, img/img1-l.jpg 2x" src="img/img1.jpg"></div>
-			<div class="box small highlight"><img src="img/img2.jpg"></div>
-			<div class="box small highlight"><img src="img/img3.jpg"></div>
-			<div class="box big highlight"><img src="img/img4.jpg"></div>
-			<div class="box small highlight"><img src="img/img5.jpg"></div>
-			<div class="box medium highlight"><img src="img/img6.jpg"></div>
-			<div class="box medium highlight"><img src="img/img7.jpg"></div>
-			<div class="box medium highlight"><img src="img/img8.jpg"></div>
-			<div class="box medium highlight"><img src="img/img9.jpg"></div>
-			<div class="box medium highlight"><img src="img/img10.jpg"></div>
-			<div class="box medium highlight"><img src="img/img11.jpg"></div>
-			<div class="box medium highlight"><img src="img/img12.jpg"></div>
-			<div class="box medium highlight"><img src="img/img13.jpg"></div>
-			<div class="box medium highlight"><img src="img/img14.jpg"></div>
-			<div class="box medium highlight"><img src="img/img15.jpg"></div>
+			<div class="box small highlight"><img src="img/small/img1.jpg"></div>
+			<div class="box small highlight"><img src="img/small/img2.jpg"></div>
+			<div class="box small highlight"><img src="img/small/img3.jpg"></div>
+			<div class="box big highlight"><img src="img/small/img4.jpg"></div>
+			<div class="box small highlight"><img src="img/small/img5.jpg"></div>
+			<div class="box medium highlight"><img src="img/small/img6.jpg"></div>
+			<div class="box medium highlight"><img src="img/small/img7.jpg"></div>
+			<div class="box medium highlight"><img src="img/small/img8.jpg"></div>
+			<div class="box medium highlight"><img src="img/small/img9.jpg"></div>
+			<div class="box medium highlight"><img src="img/small/img10.jpg"></div>
+			<div class="box medium highlight"><img src="img/small/img11.jpg"></div>
+			<div class="box medium highlight"><img src="img/small/img12.jpg"></div>
+			<div class="box medium highlight"><img src="img/small/img13.jpg"></div>
+			<div class="box medium highlight"><img src="img/small/img14.jpg"></div>
+			<div class="box medium highlight"><img src="img/small/img15.jpg"></div>
 		</div>
 	</main>
 
